--- a/notebooks/Kaylan/docs/Individual Progress Report/references.bib
+++ b/notebooks/Kaylan/docs/Individual Progress Report/references.bib
@@ -6,3 +6,11 @@
   note         = {Rev 4},
   url          = {https://www.st.com/resource/en/datasheet/lsm9ds1.pdf}
 }
+@manual{ICM20948Datasheet,
+  title        = {ICM-20948 Datasheet},
+  author       = {{TDK Invensense}},
+  year         = {2016},
+  note         = {v1.3},
+  url          = {https://invensense.tdk.com/wp-content/uploads/2016/06/DS-000189-ICM-20948-v1.3.pdf?ref\_disty=digikey},
+  organization = {TDK Invensense}
+}
