--- a/notebooks/Kaylan/docs/Individual Progress Report/references.bib
+++ b/notebooks/Kaylan/docs/Individual Progress Report/references.bib
@@ -14,3 +14,50 @@
   url          = {https://invensense.tdk.com/wp-content/uploads/2016/06/DS-000189-ICM-20948-v1.3.pdf?ref\_disty=digikey},
   organization = {TDK Invensense}
 }
+
+@mastersthesis{Palanisamy2016,
+  author = {Palanisamy, Naveen Prabu},
+  title = {Filtering of IMU data using Kalman filter},
+  school = {California State University, Sacramento},
+  year = {2016},
+  type = {Masters Project},
+  address = {Sacramento, California},
+  month = dec,
+  note = {Available from Sacramento State University's Scholarly Works. \url{https://hdl.handle.net/10211.3/182681}},
+  advisor = {Belkhouche, Fethi},
+  committee = {Kumar, Preetham},
+  department = {Electrical Engineering},
+  identifier = {99257831038101671}
+}
+
+@article{ValarezoAnazco2021,
+author = {Valarezo Añazco, Edwin and Han, Seungju and Kim, Kangil and Rivera, Patricio and Kim, Tae-Seong and Lee, Sangmin},
+year = {2021},
+month = {02},
+pages = {1404},
+title = {Hand Gesture Recognition Using Single Patchable Six-Axis Inertial Measurement Unit via Recurrent Neural Networks},
+volume = {21},
+journal = {Sensors},
+doi = {10.3390/s21041404}
+}
+
+@misc{IBM_RNN,
+  author = {{IBM}},
+  title = {What are Recurrent Neural Networks?},
+  year = {2024},
+  url = {https://www.ibm.com/topics/recurrent-neural-networks},
+  note = {Accessed: 2024-03-27}
+}
+@article{ZIHAJEHZADEH2015200,
+title = {A cascaded Kalman filter-based GPS/MEMS-IMU integration for sports applications},
+journal = {Measurement},
+volume = {73},
+pages = {200-210},
+year = {2015},
+issn = {0263-2241},
+doi = {https://doi.org/10.1016/j.measurement.2015.05.023},
+url = {https://www.sciencedirect.com/science/article/pii/S0263224115002821},
+author = {Shaghayegh Zihajehzadeh and Darrell Loh and Tien Jung Lee and Reynald Hoskinson and Edward J. Park},
+keywords = {Kalman filter, GPS/IMU integration, Inertial navigation system, Sports},
+abstract = {Nonlinear Kalman filtering methods are the most popular algorithms for integration of a MEMS-based inertial measurement unit (MEMS-IMU) with a global positioning system (GPS). Despite their accuracy, these nonlinear algorithms present a challenge in terms of the computational efficiency for portable wearable devices. We introduce a cascaded Kalman filter for GPS/MEMS-IMU integration for the purpose of trajectory determination in sports applications. The proposed algorithm uses a novel orientation filter, cascaded with a position/velocity filter. By using cascaded linear Kalman filtering, this method avoids the need to propagate additional states, resulting in the covariance propagation to become more computationally efficient for ambulatory human motion tracking. Additionally, the use of this separate orientation filter helps to retain the orientation accuracy during GPS outage. Results of the field experiments reveal that the proposed algorithm is computationally much faster compared to the available non-linear approaches and demonstrates improved trajectory tracking during GPS outages.}
+}
